--- a/package.json
+++ b/package.json
@@ -9,26 +9,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@metafi/constants": "^1.1.0",
-    "@metafi/metafi-combined-wallets-utils": "^1.1.0",
-    "@metafi/metafi-common-utils": "^1.1.0",
-    "axios": "^1.1.3",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.1",
-    "form-data": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mailgun.js": "^8.0.1",
-    "moment": "^2.29.3",
-    "mongoose": "^6.3.8",
-    "otplib": "^12.0.1",
-    "serverless-dotenv-plugin": "^4.0.1",
-    "serverless-offline": "^8.8.0",
-    "uuid": "^8.3.2"
+    "serverless-offline": "^8.8.0"
   },
   "devDependencies": {
-    "jest": "^29.1.2",
-    "nodemon": "^2.0.16",
     "serverless": "^3.21.0",
-    "serverless-plugin-monorepo": "^0.11.0"
   }
 }
